fix pos links EN

--- a/docs/en-gb/modules/app/pages/installation.adoc
+++ b/docs/en-gb/modules/app/pages/installation.adoc
@@ -96,7 +96,7 @@ Defining app rights:
 This area is not activated unless you’ve checked the *Incoming items* option under *Visible functions*.
 
 | *POS functions*
-|Which <<pos#, POS functions>> should your employees be able to use? Place check marks to specify the exact functions the back end user should work with. +
+|Which xref:pos:pos.adoc#[POS functions] should your employees be able to use? Place check marks to specify the exact functions the back end user should work with. +
 This area is not activated unless you’ve checked the *POS* option under *Visible functions*.
 
 | *Visible key figures*
@@ -203,7 +203,7 @@ Have you logged into the plentymarkets app? Welcome! The start screen is the fir
 
 * The pencil icon (icon:pencil[role="blue"]) in the top right corner. Tap on this symbol to set up xref:app:key-figures.adoc#[key performance indicators like revenue and sales figures] on the start screen.
 
-* The menu icon (icon:bars[role="blue"]) in the top left corner. Tap on this symbol to access the main menu. From here, you can view your <<app/functions/item-search#, item, customer and order data>>. You can use the app as an xref:app:warehouse-management.adoc#[inventory management system]. Or you can <<pos#, ring up customers in your brick and mortar store>>.
+* The menu icon (icon:bars[role="blue"]) in the top left corner. Tap on this symbol to access the main menu. From here, you can view your <<app/functions/item-search#, item, customer and order data>>. You can use the app as an xref:app:warehouse-management.adoc#[inventory management system]. Or you can xref:pos:pos.adoc#[ring up customers in your brick and mortar store].
 
 Have you opened the main menu? Look at the header again. Now you’ll see two additional symbols in the top right corner:
 
