--- a/docs/en-gb/modules/data/pages/deprecated-tools-exporting-data.adoc
+++ b/docs/en-gb/modules/data/pages/deprecated-tools-exporting-data.adoc
@@ -40,7 +40,7 @@ In the predefined data formats, the data fields that you export are already defi
 | The export is optimised for the ERP solution link:http://www.collmex.de[Collmex^] and exports sales or customer data. You can export data of one or multiple locations in order to link:http://collmex.de/cgi-bin/cgi.exe?1005,1,help,daten_importieren[import^] this data in Collmex. When you export sales data, Collmex uses link:http://www.collmex.de/handbuch_basic.html#zahlungsbedingung_anlegen[payment condition IDs^] for the correct assignment. Please note that the Collmex website is only available in German.
 
 | *Financial accounting*
-| The CSV file may either contain only the data from outgoing item invoices or from the <<pos#, plentyPOS>> receipts or it may contain data from both sources. The export is link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV] compliant. You can export data of one or multiple locations. Select UTF-8 as the import character set and select semicolon as the separator. +
+| The CSV file may either contain only the data from outgoing item invoices or from the xref:pos:pos.adoc#[plentyPOS] receipts or it may contain data from both sources. The export is link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV] compliant. You can export data of one or multiple locations. Select UTF-8 as the import character set and select semicolon as the separator. +
 *_Tip:_* Use a software for the CSV import that allows you to select these parameters before importing the file.
 
 | *Manufacturer commissions*
