--- a/docs/en-gb/modules/item/partials/item-introduction.adoc
+++ b/docs/en-gb/modules/item/partials/item-introduction.adoc
@@ -5,7 +5,7 @@ zuletzt bearbeitet 02.03.2022
 PIM stands for [.underline]##P##roduct [.underline]##I##nformation [.underline]##M##anagement.
 The plentymarkets PIM lets you manage all of your item information in one central system.
 In other words, you enter your product information into plentymarkets.
-Then you can sell your items on various <<markets#, markets>>, in your own <<online-store#, plentyShop>> and in your <<pos#, brick and mortar store>>.
+Then you can sell your items on various <<markets#, markets>>, in your own <<online-store#, plentyShop>> and in your xref:pos:pos.adoc#[brick and mortar store].
 
 If you need to make any changes in the future, e.g. edit an item's price or description, then you'll only have to modify this data centrally in plentymarkets.
 The data can automatically be changed on all of your sales channels.
