--- a/docs/en-gb/modules/orders/pages/order-referrer.adoc
+++ b/docs/en-gb/modules/orders/pages/order-referrer.adoc
@@ -4,7 +4,7 @@
 :author: team-order-core
 
 Omni-channel sale with plentymarkets means that you can use many different channels to offer your items to customers and, therefore, generate orders from many different sources.
-Some referrers in the system are set up by default and are fixed entries that cannot be changed. Other referrers are automatically added e.g. when you integrate a plugin or <<pos#, plentyPOS>>.
+Some referrers in the system are set up by default and are fixed entries that cannot be changed. Other referrers are automatically added e.g. when you integrate a plugin or xref:pos:pos.adoc#[plentyPOS].
 Referrers from plugins cannot be deleted. You can also add referrers manually.
 
 Each referrer has a unique ID. Some referrers have sub-referrers. The ID for a sub-referrer is composed of the ID of the main referrer followed by two decimal numbers. *Amazon*, *eBay* and plentyPOS are examples for main referrers that have sub-referrers.
