--- a/docs/en-gb/modules/plugins/partials/marketplace-kategorien-en_gb.adoc
+++ b/docs/en-gb/modules/plugins/partials/marketplace-kategorien-en_gb.adoc
@@ -29,5 +29,5 @@
 |External agencies offer various services tailored to your specific needs.
 
 | *Services » Hardware*
-|Purchase cash registers and other hardware for plentyPOS. For more information on the point of sales system plentyPOS, see *<<pos, POS*.
+|Purchase cash registers and other hardware for plentyPOS. For more information on the point of sales system plentyPOS, see xref:pos:pos.adoc#[POS].
 |====
