--- a/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
+++ b/docs/en-gb/modules/pos/pages/plentymarkets-pos-for-pos-users.adoc
@@ -218,7 +218,7 @@ Order properties represent specific characteristics of a variation. Proceed as d
 [IMPORTANT]
 .Special case: Click & Collect orders
 ====
-Do customers buy variations with order properties in your online shop and pick them up in your store afterwards? For this use case, the setting described above is not relevant. Fort these so-called <<pos/pos-online-orders#, Click & Collect orders>>, order properties are already fully considered and displayed in plentyPOS. This also applies to returns that you create via plentyPOS when customers return variations from Click & Collect orders. +
+Do customers buy variations with order properties in your online shop and pick them up in your store afterwards? For this use case, the setting described above is not relevant. Fort these so-called xref:pos:pos-online-orders.adoc#[Click & Collect orders], order properties are already fully considered and displayed in plentyPOS. This also applies to returns that you create via plentyPOS when customers return variations from Click & Collect orders. +
 *_Important:_* Order properties included in Click & Collect orders are removed if you remove the corresponding variation from the shopping cart when booking the return.
 ====
 
@@ -469,7 +469,7 @@ This chapter describes how to accept a partial amount as a down payment in cash 
 [IMPORTANT]
 .Workflow only applicable to POS orders
 ====
-The following instruction describes how to handle down payments for orders that have been created directly at the POS. Handling down payments for other order referrers, such as <<pos/plentymarkets-pos-for-pos-users#450, Click & Collect>> is not possible.
+The following instruction describes how to handle down payments for orders that have been created directly at the POS. Handling down payments for other order referrers, such as xref:pos:plentymarkets-pos-for-pos-users.adoc#450[Click & Collect] is not possible.
 ====
 
 Proceed as described below to receive a down payment and create an invoice for the remaining balance.
@@ -799,7 +799,7 @@ Only cancel POS orders in the plentymarkets app and not in the plentymarkets bac
 [IMPORTANT]
 .Cancelling Click & Collect orders
 ====
-<<pos/pos-online-orders#, Click & Collect orders>> are not created in plentyPOS but are loaded into plentyPOS from other referrers, such as your online shop. Thus, you can only cancel those orders in the back end of your plentymarkets system.
+xref:pos:pos-online-orders.adoc#[Click & Collect orders] are not created in plentyPOS but are loaded into plentyPOS from other referrers, such as your online shop. Thus, you can only cancel those orders in the back end of your plentymarkets system.
 ====
 
 [.instruction]
