--- a/docs/en-gb/modules/stock-management/pages/managing-bbd-batch.adoc
+++ b/docs/en-gb/modules/stock-management/pages/managing-bbd-batch.adoc
@@ -8,7 +8,7 @@ In plentymarkets you can manage variations with a best before date (BBD) and/or 
 [IMPORTANT]
 .Using BBD/batches with plentyPOS
 ====
-When working with <<pos#, plentyPOS>> you should not yet use these functions to manage BBD/batches, as these may currently cause errors. The functions will be available soon.
+When working with xref:pos:pos.adoc#[plentyPOS] you should not yet use these functions to manage BBD/batches, as these may currently cause errors. The functions will be available soon.
 ====
 
 [#100]
