--- a/docs/en-gb/modules/app/pages/app.adoc
+++ b/docs/en-gb/modules/app/pages/app.adoc
@@ -48,16 +48,16 @@ Are you looking forward to an upcoming feature? We’re happy to keep you in the
 The plentymarkets app includes a wide range of useful functions. Learn all about them on the following pages.
 
 * xref:app:key-figures.adoc#[Key performance indicators]
-* Viewing item, customer and order data
+* xref:app:item-search.adoc#[Viewing item, customer and order data]
 * xref:app:warehouse-management.adoc#[Mobile inventory management system]
 ** xref:app:mobile-box-picking.adoc#[Box picking]
 ** xref:app:receiving-rebooking.adoc#[Receiving goods and replenishing stock]
 ** xref:app:reshelving.adoc#[Reshelving items]
 ** xref:app:stocktaking.adoc#[Stocktaking]
-* <<pos#, The plentymarkets mobile POS system>>
+* xref:pos:pos.adoc#[The plentymarkets mobile POS system]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#30[Ringing up customers]
 ** xref:pos:integrating-plentymarkets-pos.adoc#2100[Coupons]
 ** xref:pos:pos-kassenbenutzer.adoc#173[Cancellations and returns]
-** <<pos/pos-online-orders#, Processing online orders (Click & Collect)>>
+** xref:pos:pos-online-orders.adoc#[Processing online orders (Click & Collect)]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#180[Withdrawing or depositing cash into the cash drawer]
 ** xref:pos:plentymarkets-pos-for-pos-users.adoc#210[Creating Z reports and till count reports]
