--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -401,7 +401,7 @@ display the corresponding additional information on the sold item on the receipt
 
 | **Barcode**
 |Should barcodes be displayed on your receipts? +
-In case of a xref:pos:plentymarkets-pos-for-pos-users.adoc#175[return] or a <<pos/plentymarkets-pos-for-pos-users#450, Click & Collect order>>, customers usually bring their receipts to the store. If a barcode was printed on the receipt, the POS user only has to xref:pos:plentymarkets-pos-for-pos-users.adoc#520[scan the barcode] to access the corresponding order. +
+In case of a xref:pos:plentymarkets-pos-for-pos-users.adoc#175[return] or a xref:pos:plentymarkets-pos-for-pos-users.adoc#450[Click & Collect order], customers usually bring their receipts to the store. If a barcode was printed on the receipt, the POS user only has to xref:pos:plentymarkets-pos-for-pos-users.adoc#520[scan the barcode] to access the corresponding order. +
 In other words, barcodes help POS users find orders faster. It’s no longer necessary to manually enter a receipt number or an order ID. +
 *_Note_*: The receipt number is displayed as a barcode and it includes an asterisk (*) as its prefix. When a barcode is scanned, the asterisk specifies that the user is looking for a barcode.
 
@@ -1918,7 +1918,7 @@ include::_includes:page$EA.adoc[]
 [#990]
 == Using loyalty cards
 
-In addition to automatically emailing receipts, you can offer existing customers an additional service.  Customer cards with barcodes allow you to scan the barcode directly while <<pos-plentymarkets-pos-for-pos-users#30, ringing up customers>>. This way, a contact is automatically selected. Just like with <<#2700, coupon cards>>, the contact is identified using the barcode printed on the customer card. Depending on the method used, the contact is identified using either the contact ID or the customer number. <<table-pos-loyalty-cards>> explains both methods and describes the preparatory steps for creating loyalty cards.
+In addition to automatically emailing receipts, you can offer existing customers an additional service.  Customer cards with barcodes allow you to scan the barcode directly while xref:pos:pos-plentymarkets-pos-for-pos-users.adoc#30[ringing up customers]. This way, a contact is automatically selected. Just like with <<#2700, coupon cards>>, the contact is identified using the barcode printed on the customer card. Depending on the method used, the contact is identified using either the contact ID or the customer number. <<table-pos-loyalty-cards>> explains both methods and describes the preparatory steps for creating loyalty cards.
 
 [WARNING]
 .Select one method only
@@ -2129,7 +2129,7 @@ The following functions cannot be used without an internet connection, even if y
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#250[Selling] and xref:pos:plentymarkets-pos-for-pos-users.adoc#160[redeeming] coupons
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#135[Selecting existing customers]
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#440[Accepting down payments]
-* Loading and accepting payments for <<pos/pos-online-orders#900, online orders (Click & Collect)>>
+* Loading and accepting payments for xref:pos:pos-online-orders.adoc#900[online orders (Click & Collect)]
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#370[Booking returns by linking them to main orders]
 * Creating xref:pos:plentymarkets-pos-for-pos-users.adoc#220[x reports]
 * Creating xref:pos:plentymarkets-pos-for-pos-users.adoc#230[z reports]
