--- a/docs/en-gb/modules/welcome/pages/quick-start-system-requirements.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-system-requirements.adoc
@@ -66,7 +66,7 @@ The following points may cause problems if you are working with plentymarkets.
 [#200]
 == Using the plentymarkets apps
 
-The <<#app, plentymarkets app>> allows you to access key performance indicators and search for customer, item and order data. You need a mobile Android or iOS device for these functions. In addition, the plentymarkets app allows you to perform mobile stock management tasks and to use the point of sale system <<pos#, plentyPOS>>. 
+The <<#app, plentymarkets app>> allows you to access key performance indicators and search for customer, item and order data. You need a mobile Android or iOS device for these functions. In addition, the plentymarkets app allows you to perform mobile stock management tasks and to use the point of sale system xref:pos:pos.adoc#[plentyPOS]. 
 
 In addition, the xref:stock-management:plentywarehouse.adoc#[plentyWarehouse app (beta)] is available. It contains up-to-date and improved functions for mobile stock management. 
 
