ADD info about name limit as requested in forum; FIX headers that should be discrete

--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
@@ -74,7 +74,7 @@ Welche Eigenschaftstypen akzeptiert werden, erfährst du auf der jeweiligen Mark
 
 ! *Kein*
 !Der Name der Eigenschaft kann im plentyShop angezeigt werden.
-Dies eignet sich, z.B. um die technischen Besonderheiten einer Variante hervorzuheben (Bluetooth, WLAN).
+Dies eignet sich, z.B. um Stichwörter für eine Variante hervorzuheben ("Bluetooth" oder "ist WLAN-fähig").
 //* Filter zu erstellen (nur Bluetooh-fähige Produkte in die Suchergebnisse berücksichtigen)
 //* xref:artikel:eigenschaften.adoc#intable-bestellmerkmal[Als Bestellmerkmal]: Eignet sich, z.B. um Kunden xref:artikel:personalisierte-artikel.adoc#200[zusätzliche Optionen und Dienstleistungen] während des Bestellvorgangs anzubieten.
 
@@ -234,6 +234,8 @@ Dieser Name kann für Kunden xref:artikel:eigenschaften.adoc#1500[im plentyShop 
 //sichtbar im Webshop je nachdem wie man ShopBuilder konfiguriert?
 //Die Beschreibung wird angezeigt, wenn du mit dem Mauszeiger auf das Merkmal zeigst.
 endif::item[]
+
+*_Hinweis_*: Der Name ist auf 255 Zeichen begrenzt.
 
 *_Hinweis_*: Klicke auf icon:plus[role="darkGrey"], um den Namen in weitere Sprachen zu übersetzen.
 
