--- a/docs/en-gb/modules/_includes/pages/creating-new-groups.adoc
+++ b/docs/en-gb/modules/_includes/pages/creating-new-groups.adoc
@@ -6,7 +6,7 @@ Creating a new group:
 . Customise the settings to meet your needs.
 . Save (icon:save[role="darkGrey"]) the settings.
 
-[#group-details]
+[discrete]
 ===== Details
 
 [cols="1,4a"]
@@ -79,7 +79,7 @@ endif::stock,crm[]
 If so, then decide whether the surcharge should be treated as a percentage or as a fixed price, e.g. 5% or 5 EUR.
 |====
 
-[#group-names]
+[discrete]
 ===== Name
 
 [cols="1,4a"]
