FIX include file paths that were not migrated correctly on the sales prices page

--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -931,7 +931,7 @@ Manuell::
 --
 Wenn du die Preiskalkulation für nur wenige Artikel speichern möchtest, dann empfiehlt es sich, die Preiskalkulation manuell zu verknüpfen.
 
-include::import-export-anlage:page$import-export-anlage-verzeichnis.adoc[tag=preiskalkulation-anwenden]
+include::page$import-export-anlage-verzeichnis.adoc[tag=preiskalkulation-anwenden]
 
 --
 Import::
@@ -967,7 +967,7 @@ Wenn du die Preiskalkulation für viele Artikel speichern möchtest, dann empfie
 [discrete]
 ===== Varianten-Gruppenfunktion
 
-include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
+include::page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 
 . Aktiviere die Option *Preiskalkulation* (icon:check-square[role="blue"]) und wähle eine bereits erstellte Kalkulation aus der Dropdown-Liste.
 . Klicke auf icon:execute[set=plenty] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
@@ -975,7 +975,7 @@ include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenf
 [discrete]
 ===== Stapelverarbeitung
 
-include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
+include::page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 
 . Aktiviere rechts die Option *Preiskalkulation* (icon:check-square[role="blue"]) und wähle eine bereits erstellte Kalkulation aus der Dropdown-Liste.
 . Klicke auf icon:execute[set=plenty] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
