--- a/docs/en-gb/modules/item/pages/prices.adoc
+++ b/docs/en-gb/modules/item/pages/prices.adoc
@@ -931,7 +931,7 @@ Manually::
 --
 If you only want to save the price calculation for a few items, then it makes sense to manually link the price calculation.
 
-include::import-export-create:page$import-export-create-directory.adoc[tag=apply-price-calculation]
+include::page$import-export-create-directory.adoc[tag=apply-price-calculation]
 
 --
 Import::
@@ -966,7 +966,7 @@ If you want to save the price calculation for lots of items, then we would recom
 [discrete]
 ===== Variation group function
 
-include::import-export-create:page$mass-processing.adoc[tag=variation-group-function]
+include::page$mass-processing.adoc[tag=variation-group-function]
 
 . Activate the option *Price calculation* (icon:check-square[role="blue"]) and select an existing calculation from the drop-down list.
 . Click on icon:execute[set=plenty] *Execute* to apply the settings to the variations.
@@ -974,7 +974,7 @@ include::import-export-create:page$mass-processing.adoc[tag=variation-group-func
 [discrete]
 ===== Batch processing
 
-include::import-export-create:page$mass-processing.adoc[tag=variation-batch-processing]
+include::page$mass-processing.adoc[tag=variation-batch-processing]
 
 . On the right, activate the option *Price calculation* (icon:check-square[role="blue"]) and select an existing calculation from the drop-down list.
 . Click on icon:execute[set=plenty] *Apply* to apply the settings to the variations.
