--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -62,7 +62,7 @@ a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. +
 |Diese Einstellung greift für den Auftragsimport. Aufträge werden als bezahlt oder nicht bezahlt importiert. Unabhängig von dieser Einstellung werden Artikel bei ausreichend Bestand sofort für den Versand freigegeben. Mit der Option *offen* könntest du bei tatsächlichem Zahlungseingang von Kaufland.de den Auftrag auf bezahlt setzen und somit eine Kontrolle von Kaufland.de durchführen.
 
 | *Versanddienstleister verknüpfen*
-|Diese Einstellung ist ausschließlich dafür bestimmt, dass Kaufland.de nach Bestätigung des Versands mit Hilfe der richtigen Paketnummer den korrekten Tracking-Link an Kund:innen per E-Mail versenden kann. +
+|Diese Einstellung ist erforderlich, damit Kaufland.de nach Bestätigung des Versands mit Hilfe der richtigen Paketnummer den korrekten Tracking-Link an Kund:innen per E-Mail versenden kann. +
 *_Wichtig:_* Du musst jeden deiner Dienstleister mit einem Dienstleister aus der Dropdown-Liste verknüpfen.
 
 2+^| Artikeleinstellungen
@@ -80,7 +80,7 @@ Diese Einstellung greift für Artikeldaten und Angebotsdaten.
 | *Bildposition für das Energieeffizienzlabel*
 |Position des Energieeffizienzlabels eingeben. Alle Bilder, die als Energieeffizienzlabel übertragen werden sollen, müssen diese Position haben.
 
-| *Technische Daten zur Artikelbeschreibung  hinzufügen*
+| *Technische Daten zur Artikelbeschreibung hinzufügen*
 |Wählen, ob die technischen Daten, die im Tab *Texte* des Artikels eingegeben sind, zur Artikelbeschreibung bei Kaufland.de hinzugefügt werden sollen. Standardmäßig ist die Option auf *Ja* gestellt.
 
 | *Produktdatei generieren*
@@ -223,7 +223,7 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 [IMPORTANT]
 .Kaufland.de-Aufträge nicht gruppieren
 ====
-Beim Auftragsimport von Kaufland.de findet der Abgleich über die externe Auftragsnummer statt. Die externe Auftragsnummer existiert aber bei einem gruppierten Auftrag nicht mehr. Deshalb besteht die Gefahr, dass Aufträge beim nächsten Abruf erneut erstellt werden.
+Beim Auftragsimport von Kaufland.de findet der Abgleich über die externe Auftragsnummer statt. Bei einem gruppierten Auftrag existiert aber keine externe Auftragsnummer mehr. Deshalb besteht die Gefahr, dass Aufträge beim nächsten Abruf erneut erstellt werden.
 ====
 
 [#800]
