--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -65,6 +65,29 @@ a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. +
 |Diese Einstellung ist erforderlich, damit Kaufland.de nach Bestätigung des Versands mit Hilfe der richtigen Paketnummer den korrekten Tracking-Link an Kund:innen per E-Mail versenden kann. +
 *_Wichtig:_* Du musst jeden deiner Dienstleister mit einem Dienstleister aus der Dropdown-Liste verknüpfen.
 
+| *Versandbestätigungen senden über*
+| Bisher wurden Versandbestätigungen über einen stündlichen Cron an Kaufland gesendet. Dieser Cron wird aber bald abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein und stelle die Option dann auf *Ereignisaktion*.
+
+[cols="1,3"]
+!===
+! *stündlichen Cron*
+! Der stündliche Cron wird bald abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein. Stelle die Option *Versandbestätigungen senden über* dann auf *Ereignisaktion*.
+
+! *Ereignisaktion* +
+(empfohlen)
+! Versandbestätigungen werden über die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> gesendet.
+!===
+
+| *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung*
+| In welchen Status sollen Aufträge verschoben werden, für die keine Versandbestätigung an Kaufland.de gesendet werden konnte?
+
+*_Hintergrund:_* Mit der Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass die Artikel eines Auftrags versendet wurden. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast.
+
+//| *Auftragsstatus für Aufträge mit fehlgeschlagener In-Fulfillment-Bestätigung*
+//| In welchen Status sollen Aufträge verschoben werden, für die keine In-Fulfillment-Bestätigung an Kaufland.de gesendet werden konnte?
+
+//*_Hintergrund:_* Mit der Ereignisaktion <<#in-fulfillment, In-Fulfillment-Bestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass ein Auftrag an das Lager übergeben wurde. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener In-Fulfillment-Bestätigung* gewählt hast.
+
 2+^| Artikeleinstellungen
 
 | *Artikelexport aktivieren*
@@ -174,10 +197,6 @@ Nachdem du {market} in plentymarkets eingerichtet hast, stehen die in <<#data-ex
 
 | Auftragsimport
 | alle 15 Minuten
-
-| Markierung *Versendet*
-| stündlich +
-*_Hinweis:_* Die Markierung *Versendet* wird nach Buchung des Warenausgangs an {market} übermittelt.
 
 | Weitere Daten
 | * Export von Aufpreisen für Attributwerte (Variantenartikel)
@@ -439,9 +458,49 @@ image::maerkte:Kaufland_logo.png[]
 
 Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um {market} automatisch über Änderungen des Auftragsstatus zu informieren. Für {market} sind die folgenden Ereignisaktionen verfügbar:
 
+* Neu: Versandbestätigung senden (<<#shipping-confirmation, Wie?>>)
 * Rechnung generieren (<<#890, Wie?>>)
 * Rechnung bei Kaufland.de hochladen (<<#895, Wie?>>)
 * Stornierung an Kaufland.de senden (<<#900, Wie?>>)
+//* Neu: In-Fulfillment-Bestätigung senden (<<#in-fulfillment, Wie?>>)
+
+[#shipping-confirmation]
+=== NEU: Versandbestätigung senden
+
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} darüber zu informieren, dass die Artikel eines Auftrags versendet wurden.
+
+:table-event-procedure: <<#shipping-confirmation-kaufland>>
+
+include::../_includes/textblocks/instructions/EA.adoc[]
+
+[[shipping-confirmation-kaufland]]
+.Ereignisaktion, um Versand an {market} zu melden
+[cols="1,3,3"]
+|====
+|Einstellung |Option |Auswahl
+
+| *Ereignis*
+| Ereignis wählen, zum Beispiel:
+
+* *Statuswechsel > [Status wählen, zum Beispiel [7] Warenausgang gebucht]* +
+_oder_
+
+* *Auftragsänderung > Paketnummer*
+|
+| *Filter 1*
+| *Auftrag &gt; Auftragstyp*
+| *Auftrag*
+
+| *Filter 2*
+| *Auftrag &gt; Herkunft*
+| *Kaufland.de*
+
+| *Aktion*
+| *Auftrag*
+| *Versandbestätigung an Kaufland.de senden* +
+*_Hinweis:_* Aufträge, für die keine Versandbestätigung an {market} gesendet werden konnten, werden in den Status verschoben, den du für die Option *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast. Diese Option findest du im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen*. +
+<<#no-shipping-confirmation, So behandelst du Aufträge in diesem Status.>>
+|====
 
 [#890]
 === Rechnungen automatisch erstellen
@@ -568,6 +627,8 @@ include::_includes:page$EA.adoc[]
 |Grund wählen. +
 *_Hinweis:_* Du kannst bei Kaufland.de einzelne Artikelpositionen stornieren. Allerdings kann der Betrag der Stornierung nicht frei gewählt werden. Du kannst also für jede Auftragsposition nur den kompletten Verkaufspreis erstatten. Nachlässe/Preisreduzierungen sind also nicht möglich.
 |====
+
+
 
 [discrete]
 ===== Retouren bei Kaufland.de
