CHANGE link to see if brackets can be made compatible

--- a/docs/de-de/modules/daten/pages/elasticSync-merkmale.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-merkmale.adoc
@@ -2,7 +2,10 @@
 :keywords: Merkmal importieren, Merkmale importieren, Importieren Merkmal, Importieren Merkmale, Merkmal Import, Merkmale Import, Merkmal-Import, Merkmale-Import, Import Merkmal, Import Merkmale
 :id: C7ST0UL
 :author: team-item
-//zuletzt aktualisiert am 20.11.2020
+
+////
+zuletzt bearbeitet 30.03.2022
+////
 
 //optional - add extra sentences between the brackets in einleitung-weitere-info if you want to have further info in your introduction
 :einleitung-daten: pass:quotes[Merkmalen und Merkmalgruppen]
@@ -26,20 +29,20 @@ include::partial$abgleich.adoc[]
 |Einstellung |Erläuterung
 
 | *Merkmal-ID*
-|In welcher Spalte der CSV-Datei werden Merkmal-IDs aufgelistet? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du _bestehende Merkmale aktualisieren_ möchtest.
+|In welcher Spalte der CSV-Datei werden Merkmal-IDs aufgelistet? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du bestehende Merkmale aktualisieren möchtest.
 
 *_Hintergrund-Info_*: Jedes neu angelegte Merkmal erhält automatisch eine ID, die nicht geändert werden kann. Die ID dient zur eindeutigen Kennzeichnung des Merkmals. Da die ID eindeutig ist, lässt sich damit gut prüfen, ob der importierte Datensatz bereits in plentymarkets vorhanden ist.
 
 | *ID der Merkmalgruppe*
-|In welcher Spalte der CSV-Datei werden Gruppen-IDs aufgelistet? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du _bestehende Merkmalgruppen aktualisieren_ möchtest.
+|In welcher Spalte der CSV-Datei werden Gruppen-IDs aufgelistet? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du bestehende Merkmalgruppen aktualisieren möchtest.
 
 *_Hintergrund-Info_*: Jede neu angelegte Merkmalgruppe erhält automatisch eine ID, die nicht geändert werden kann. Die ID dient zur eindeutigen Kennzeichnung der Gruppe. Da die ID eindeutig ist, lässt sich damit gut prüfen, ob der importierte Datensatz bereits in plentymarkets vorhanden ist.
 
 | *Merkmalname*
-|In welcher Spalte der CSV-Datei ist der Name des Merkmals aufgeführt? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du _neue Merkmale erstellen_ möchtest.
+|In welcher Spalte der CSV-Datei ist der Name des Merkmals aufgeführt? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du neue Merkmale erstellen möchtest.
 
 | *Merkmalgruppenname*
-|In welcher Spalte der CSV-Datei ist der Name der Merkmalgruppe aufgeführt? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du _neue Merkmalgruppen erstellen_ möchtest.
+|In welcher Spalte der CSV-Datei ist der Name der Merkmalgruppe aufgeführt? Wähle diese Spalte hier. Diese Option ist sinnvoll, wenn du neue Merkmalgruppen erstellen möchtest.
 |====
 
 [#20]
@@ -61,7 +64,7 @@ Wenn ein Artikel mehrere Merkmale hat, werden die Merkmale aufsteigend nach Posi
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü: <<artikel/einstellungen/eigenschaften#300, Einrichtung » Artikel » Merkmale » Tab: Merkmale » icon:plus-square-o[role="darkGrey"] Merkmal öffnen » Eingabefeld: Position>>
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#300[Einrichtung » Artikel » Merkmale » Tab: Merkmale » [Merkmal öffnen\] » Eingabefeld: Position]
 
 '''
 [#50]
