ADD definition of ui

--- a/docs/de-de/modules/artikel/pages/neue-ui.adoc
+++ b/docs/de-de/modules/artikel/pages/neue-ui.adoc
@@ -3,11 +3,14 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 01.03.2022
+zuletzt bearbeitet 30.03.2022
 ////
 
 Dieses Kapitel beschreibt die neue Artikel-UI, die im März 2022 in einer offenen Betaphase veröffentlicht wurde.
-Offene Beta bedeutet, dass du die neue Artikel-UI sehen und ausprobieren kannst.
+
+* UI steht für [.underline]##U##ser [.underline]##I##nterface (auf Deutsch: Benutzeroberfläche).
+Mit der Formulierung "neue Artikel-UI" meinen wir also, dass es in plentymarkets jetzt ein neues Menü zur Verwaltung von Artikeldaten gibt.
+* "Offene Beta" bedeutet, dass du die neue Artikel-UI sehen und ausprobieren kannst.
 Die neue UI hat allerdings noch nicht den vollen Funktionsumfang.
 
 video::682773880[vimeo]
