--- a/docs/en-gb/modules/item/pages/new-ui.adoc
+++ b/docs/en-gb/modules/item/pages/new-ui.adoc
@@ -3,11 +3,14 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 01.03.2022
+zuletzt bearbeitet 30.03.2022
 ////
 
 This chapter describes the new item UI, which entered the open beta phase in March, 2022.
-Open beta means that you can see and test the new item UI.
+
+* UI stands for [.underline]##U##ser [.underline]##I##nterface.
+With the phrase "new item UI", we mean that there is a new menu for managing item data in plentymarkets. 
+* Open beta means that you can see and test the new item UI.
 However, the new item UI does not yet include every function.
 
 == Menu structure
