--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -781,7 +781,7 @@ Nachdem du Datenfelder für den Export gewählt hast, kannst du den Katalogexpor
 Vorschau im Katalog erstellen::
 +
 --
-
+//tag::catalogue-preview[]
 [.instruction]
 Vorschau im Katalog erstellen:
 
@@ -792,7 +792,7 @@ Vorschau im Katalog erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
 → Eine CSV-Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
-
+//end::catalogue-preview[]
 --
  
 Vorschau in Katalogübersicht erstellen::
