FIX order cat. format

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -240,7 +240,7 @@
 **** xref:data:export-standard-formats.adoc[Using standard formats]
 **** xref:data:catalogue-formats.adoc[Standard formats]
 ***** xref:data:catalogues-item.adoc[Item (new)]
-***** xref:data:order.adoc[Orders]
+***** xref:data:catalogue-format-order.adoc[Orders]
 ***** xref:data:manufacturers.adoc[Manufacturers]
 ***** xref:data:practical-examples-order.adoc[Practical example: orders and order items]
 ***** xref:data:practical-examples-purchase-order.adoc[Practical example: purchase orders]
