--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -565,14 +565,14 @@ include::partial$limango-recommended-mappings.adoc[]
 [#filter-export]
 ==== NEU: Nur bestimmte Artikel exportieren (_optional_)
 
-include::_textblocks/catalogues/instructions/catalogue-filters.adoc[]
+include::partial$catalogue-filters.adoc[]
 
 [#preview]
 === NEU: Vorschau der Exportdaten erstellen (_optional_)
 
 Nachdem du alle Datenfelder zugeordnet hast, kannst du die ersten fünf Datenzeilen des Exports über die Vorschaufunktion testen.
 
-include::../daten/daten-exportieren/kataloge/standardformate-exportieren.adoc[catalogue-preview]
+include::partial$standardformate-exportieren.adoc[catalogue-preview]
 
 [#904]
 === Katalog aktivieren
