--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -781,7 +781,7 @@ After you have selected data fields for export, you can test the catalogue expor
 Create a preview in the catalogue::
 +
 --
-
+//tag::catalogue-preview[]
 [.instruction]
 Creating a preview in the catalogue:
 
@@ -790,9 +790,10 @@ Creating a preview in the catalogue:
 . Open the catalogue.
 . In the toolbar at the top, click on *Preview* (icon:preview[set=material]). +
 → A preview of the first 5 data rows of the export is shown in the *Preview* window.
+. Check the data rows. Does the export work as expected?
 . *_Optional_*: Click on *Download data* (icon:file_download[set=material]). +
 → A CSV file with the first 5 data rows can be saved on your computer.
-
+//end::catalogue-preview[]
 --
  
 Create a preview from the catalogue list::
@@ -810,6 +811,7 @@ Creating a preview from the catalogue list:
 . In the row of the catalogue, open the further actions (icon:ellipsis-v[]).
 . Click on *Preview* (icon:preview[set=material]). +
 → A preview of the first 5 data rows of the export is shown in the *Preview* window.
+. Check the data rows. Does the export work as expected?
 . *_Optional_*: Click on *Download data* (icon:file_download[set=material]). +
 → A CSV file with the first 5 data rows can be saved on your computer.
 
