--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -52,7 +52,7 @@ After installing and setting up the plugin, the automatic processes described in
 * Your products are listed in the limango marketplace. The name of your company is shown with your products.
 * Customers place an order on limango.
 * Customers make their payments to limango.
-* The order is imported to plentymarkets. +
+* → The order is imported to plentymarkets. +
 *_Note:_* Customers make their payments to limango. Nevertheless, orders are imported with the status *[3] Waiting for payment*.
 * When you receive the order, you ship the products (drop shipping).
 
@@ -562,6 +562,18 @@ include::partial$recommendation-text.adoc[]
 
 include::partial$limango-recommended-mappings.adoc[]
 
+[#filter-export]
+==== NEW: Only exporting specific items (_optional_)
+
+include::_textblocks/catalogues/instructions/catalogue-filters.adoc[]
+
+[#preview]
+=== NEW: Previewing item export data (_optional_)
+
+When you have finished mapping all data fields, you can test the first five data rows of the export using the preview function.
+
+include::partial$exporting-standardformats.adoc[tag=catalogue-preview]
+
 [#904]
 === Activating the catalogue
 
@@ -595,7 +607,7 @@ limango delivery notes must contain the limango logo. limango provides a PDF tem
 [.instruction]
 Personalising the PDF template for delivery notes:
 
-. Download the PDF template for limango delivery notes and save it on your computer:
+. Save the PDF template for limango delivery notes on your computer:
   ** link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/Lieferschein_Vorlage_limango_Marktplatz.pdf[Download PDF template]
 . Open the PDF template in a program for editing PDF files.
 . At the bottom left of the footer, insert the following company data: +
@@ -682,7 +694,7 @@ Automate the following aspects of limango order processing:
 [#cancellations]
 === Automatically sending cancellations
 
-Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically notify limango of cancellations.
+Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically inform limango of cancellations.
 
 :table-event-procedure: <<#event-procedure-cancellations-limango>>
 
