Added translations, fixed links

--- a/docs/de-de/modules/daten/pages/export-import.adoc
+++ b/docs/de-de/modules/daten/pages/export-import.adoc
@@ -1,4 +1,4 @@
-= Veraltet: Dynamischer Datenaustausch
+= Dynamischer Datenaustausch (alte Funktion)
 :page-layout: overview
 :keywords: Datenformate, dynamischer Export
 :description: Erfahre, wie du den dynamischen Export in plentymarkets nutzt und welche Datenformate dir zur Verfügung stehen.
