--- a/docs/en-gb/modules/data/pages/deprecated-tools-exporting-data.adoc
+++ b/docs/en-gb/modules/data/pages/deprecated-tools-exporting-data.adoc
@@ -1,149 +1,33 @@
-= Exporting data with the dynamic export
+= Exporting data with the dynamic export (old function)
 :keywords: FiBu, Financial accounting, Syska, Collmex, Xero, BMECat, price comparison portals, exporting data formats
 :description: Learn how to export predefined and customised data formats as well as data formats for price search engines.
 :id: TL3MS5D
 :author: team-plenty-channel
 
-Use the custom export or dynamic export to manually export data from your plentymarkets system.
+[IMPORTANT]
+.Important: No new features planned for the dynamic export
+====
+The dynamic export in the *Data » Dynamic export* menu will not be developed any further. You can still see and use the function. However, no new features or extensions will be implemented.
+====
 
-In the *Data » Custom export* menu, you will find predefined export formats. The data fields of these formats are already defined to a large extent and can hardly be adjusted. +
-In the *Data » Dynamic export* menu, you can freely select the data fields, thus making it possible to individualise the data format's content. +
+Use the dynamic export in the *Data » Dynamic export* menu to manually export data from your plentymarkets system. With dynamic export, you can freely select the data fields, thus making it possible to individualise the data format's content.
 
 [#05]
 ==  Customising a file for data exchange
 
-Generally, you will receive a CSV file during the data export. Regardless of whether you export data from an external system or from plentymarkets, it is generally necessary to make slight changes to the file before you import it into plentymarkets. Make sure to use UTF-8 coding when you export the data format. The data record has to be divided into columns, which will only happen if you are using the correct separator. If needed, try seeing what different separators look like in the file's import preview.
-
-[#10]
-==  Exporting predefined data formats
-
-In the predefined data formats, the data fields that you export are already defined. Nevertheless, there are a few settings that you need to carry out. These settings have an effect on the export's data volume.
-
-<<table-predefined-data-formats>> explains the predefined data formats that are available in the *Data exchange » Custom export* menu. Below the table you can find the steps that are required to export a predefined data format. The settings that require additional information are not listed for every data format, but summarised in <<table-settings-formats-export>>.
-
-[[table-predefined-data-formats]]
-.Predefined export formats in the *Data » Custom export menu*
-[cols="1,3"]
-|====
-| Data format | Explanation
-
-| *Order data for customs*
-| The exported CSV file contains order data relating to exportation, e.g. shipping costs.
-
-| *BMECat*
-|link:https://www.bme.de/en/start/[BMECat^] is a standardised, XML-based exchange format for catalogue data and product classification systems in the B2B field.
-
-| *CleverReach*
-| The export transmits data of all orders with status 7 of the previous day to the email marketing software xref:crm:sending-newsletters.adoc#1700[CleverReach].
-
-| *Collmex accounting*
-| The export is optimised for the ERP solution link:http://www.collmex.de[Collmex^] and exports sales or customer data. You can export data of one or multiple locations in order to link:http://collmex.de/cgi-bin/cgi.exe?1005,1,help,daten_importieren[import^] this data in Collmex. When you export sales data, Collmex uses link:http://www.collmex.de/handbuch_basic.html#zahlungsbedingung_anlegen[payment condition IDs^] for the correct assignment. Please note that the Collmex website is only available in German.
-
-| *Financial accounting*
-| The CSV file may either contain only the data from outgoing item invoices or from the xref:pos:pos.adoc#[plentyPOS] receipts or it may contain data from both sources. The export is link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV] compliant. You can export data of one or multiple locations. Select UTF-8 as the import character set and select semicolon as the separator. +
-*_Tip:_* Use a software for the CSV import that allows you to select these parameters before importing the file.
-
-| *Manufacturer commissions*
-| The exported CSV file contains commissions that are saved in the xref:item:managing-items.adoc#560[manufacturer data].
-
-| *Invoice book*
-| The exported CSV file contains a list of all invoices and credit notes that were generated on the selected date or within a month. Select Latin as the import character set and select semicolon as the separator.
-
-| *Revenue by order date*
-| The exported CSV file contains sales data by the date the order was received. +
-*_Note:_* If you want to use a data export for the advance return for tax on sales/purchases, then we recommend that you use the export *Outgoing item invoices*, as the case of entitlement first goes into effect when the goods are delivered. A further advantage is that it does not result in as many credit notes/cancelled invoices, when services are not paid for or when changes are made to the order before the invoice has been issued.
-
-| *VAT number check*
-| The exported CSV file contains customer data of checked customers as well as their VAT number. The entry in the *valid* column of the exported CSV file tells you whether or not the customer has a valid VAT number. The entry 0 stands for invalid and 1 stands for valid. +
-The VAT number is automatically checked during the order process in your store. You can manually check the VAT number of customers who bought your items on other markets. For further information about the VAT number check, refer to the xref:crm:managing-contacts.adoc#5500[Checking the VAT number] chapter of the manual. +
-*_Important:_* Place a check mark next to the option *Active*. If you do not place a check mark, then all of the VAT number check data will be exported and th time period that was selected will be ignored.
-
-| *Sold quantities of items*
-| The exported CSV file contains a list of all sold items and of the sold quantity within a certain time period. You choose theormation that you want to include in the export.
-
-| *Outgoing item invoices*
-| The exported CSV file contains a list of invoice data that was generated on the selected date or within a month. A memo is saved for every invoice according to the VAT rate. In addition, the memo that belongs to the order will be exported. Select Latin as the import character set and select comma as the separator.
-
-| *Xero*
-| The exported CSV file contains sales data from UK orders for the data exchange with the accounting software link:https://www.xero.com/[Xero^]. You can export data of one or multiple locations. +
-VAT rates have to be given the exact same names that Xero uses. Go to *Setup » Client » Select client » Locations » Select location » Accounting » Tab: VAT rates*. Enter a name behind the VAT rate.
-
-| *Payment documents*
-| The exported CSV file contains incoming payments that are assigned to an order. The invoice data is retrieved according to the payment method.
-|====
-
-Next, you will learn how to export the data formats mentioned above.
-
-[.instruction]
-Exporting a predefined data format:
-
-.  Go to *Data » Custom export*.
-.  Select a data format from the drop-down list. Pay attention to the information given in <<table-preconfigured-export-formats>>.
-.  Click on *Add*. +
-→ The export format will be created and added to the list.
-.  Carry out the settings. Pay attention to the information given in <<table-settings-formats-export>>. The table only lists settings that require additional explanation.
-. *Save* the settings.
-.  Click on *Export data*. +
-→ The export file will be created.
-.  Save the file on your computer so that you can use it later.
-
-[IMPORTANT]
-.Column header names
-====
-If you change the names of the column headers after the export, then the data cannot be correctly assigned when importing the file. This is because plentymarkets uses the column header names for assignment. When you import your data into other external systems, it might be necessary to adapt the column header names for correct assignment.
-====
-
-[[table-settings-formats-export]]
-.Settings; exporting data formats
-[cols="1,3"]
-|====
-| Setting | Explanation
-
-| *Name*
-| Adopt the default name or enter an individual name.
-
-| *Company No.*
-| Only for the *Collmex accounting* data format. This option is only relevant if you use Collmex to manage data for more than one company. Number 1 is selected by default.
-
-| *Free text field*
-| Only for the *Financial accounting* data format. Refers to the xref:item:managing-items.adoc#70[free text fields] linked with the item and their content. If you selected a free text field here, select the option *One data record per stock unit (standard)* for the format. This option is described below.
-
-| *Format*
-| Only for the *Financial accounting* data format. +
-*One data record per invoice and VAT rate* = One posting line per invoice and VAT rate. If an invoice only contains one VAT rate, only one posting line will be exported. +
-*One data record per stock unit (standard)* = One posting line per stock unit. The option *One data record per stock unit (standard)* is useful if you have saved individual xref:orders:accounting.adoc#650[revenue accounts] for items in plentymarkets.
-
-| *Item category to the level*
-| Only for the *Price list* data format. Select a level to define up to which level items should be exported.
-
-| *Date* +
-*Period*
-| Select day, month and year to only export the data of this specific date. Instead of a specific date, you can also export data of an entire month. +
-*Sold quantities of items*: The setting *Date* defines whether the data contained in the export is based on the date when the order was received or when the payment was received.
-
-| *AccountCode*
-| Only for the *Xero* data format. Enter the AccountCode as saved in Xero.
-
-| *Company location*
-| Only for the *Xero* data format. Select the country where the company is located, as saved in Xero. This setting defines how prices and dates will be formatted and thus fulfils the import requirements for Xero.
-
-| *Additionally retrieve and include the interim transaction report*
-| Only for the *Payment documents* data format. Activate to retrieve and export interim transaction reports. +
-In the interim transaction report, you can see payments that have not been booked yet but that the bank already knows of and that will be booked soon. This type of information allows you to send items even earlier and make your service even better. +
-*_Important:_* You may have to contact your bank in order to see interim transaction reports.
-|====
+Generally, you will receive a CSV file during the data export. Regardless of whether you export data from an external system or from plentymarkets, it is generally necessary to make slight changes to the file before you import it into plentymarkets. Make sure to use UTF-8 coding when you export the data format. The data record has to be divided into columns, which will only happen if you are using the correct separator. If needed, try seeing what different separators look like in the file’s import preview.
 
 [#20]
 ==  Exporting customised data formats
 
-In the *Data » Dynamic export* menu, you can create individual data formats, which contain exactly those data fields that you want to export. Here, the data fields are also predefined, but you have the choice to determine which fields you want to export. This means that this data format gives you more flexibility compared to the xref:data:exporting-data.adoc#10[predefined data formats]. The data is exported in a file. You can then make this file available to a specific tool or interface, such as a specific market. You also edit existing data formats in this menu.
+In the *Data » Dynamic export* menu, you can create individual data formats, which contain exactly those data fields that you want to export. The data is exported in a file. You can then make this file available to a specific tool or interface, such as a specific market. You also edit existing data formats in this menu.
 
-The xref:data:data-formats.adoc#[Data formats] page of the manual gives you an overview of the data formats that you can customise. The subpages provide detailed descriptions of the data formats. You will learn which data fields you need to activate and which filters and procedures you need to set so that your data will be exported correctly. Most of the data formats can be reimported to plentymarkets after you have edited them.
+The xref:main@manual:data:data-formats.adoc[Data formats] page of the manual gives you an overview of the data formats that you can customise. The subpages provide detailed descriptions of the data formats. You will learn which data fields you need to activate and which filters and procedures you need to set so that your data will be exported correctly. Most of the data formats can be reimported to plentymarkets after you have edited them.
 
 Depending on the data format type you select, the *Fields*, *Filter* and *Procedures* tabs will be available after you have created the new data format. The *Fields* and *Filter* tabs are available for every format and the Procedures only in a few. <<table-data-dynamic-export>> explains the tabs in the *Data » Dynamic export* menu.
 
 [[table-data-dynamic-export]]
-.Tabs in the *Data » Dynamic export menu*
+.Tabs in the *Data » Dynamic export* menu
 [cols="1,3"]
 |====
 | Tab | Explanation
@@ -154,7 +38,7 @@ Depending on the data format type you select, the *Fields*, *Filter* and *Proced
 | *Filter*
 | Activate data fields or functions and select values for the filters. Afterwards, only the data will be exported that exactly matches the selected characteristics. +
 There are different options available in the drop-down lists depending on the filter option you are working with. Selecting the data field allows you to edit the fields *Operator* and *Value*. Depending on the data field, you will either be able to select values from a drop-down list or values will have to be entered into a text field. +
-*_Example:_* Place a check mark in the *Active* column for the data field/function *ItemID*. Select the operator *&gt;* from the drop-down list and enter the item ID in the text field in the *Value* column. Only items with an ID higher than the one you entered will be exported.
+*_Example:_* Place a check mark next to *ItemID* for the *data field/function* column. Select the operator *>* from the drop-down list and enter the item ID in the text field in the *Value* column. Only items with an ID higher than the one you entered will be exported.
 
 | *Procedures*
 | Select the procedure that is to be carried out. +
@@ -171,17 +55,17 @@ Exporting the data format:
 .  Go to *Data » Dynamic export*.
 .  Click on the *New data format* tab.
 .  Select a *Data format type* from the drop-down list. +
-→ A *Data format name* will be assigned automatically, which is composed of a name and a number. You can change the name here.
-. *Save* the settings. +
+→ A *Data format name* will be assigned automatically, which is composed of a name and a number. You can change the name.
+. *Save* (icon:save[role="green"]) the settings. +
 → The data format that you have just created will be listed in the *Edit data format* tab.
 .  Expand the data format. +
 → The available tabs of the data format will be displayed.
-.  Carry out the settings. Pay attention to the information given in <<table-data-dynamic-export>>.
+.  Carry out the settings. Pay attention to the explanations given in <<table-data-dynamic-export>>.
 .  In the *Fields* tab, enter the *Number of lines* to be exported. Pay attention to the following note regarding the line limitation.
 .  In the *Starting in line* field, enter which line the data export should begin from. +
 → Line 0 = Column title.
-. *Save* the settings.
-.  Click on *Export data*. +
+. *Save* (icon:save[role="green"]) the settings.
+.  Click on the gear-wheel icon *Export data*. +
 → The data will be exported in a CSV file.
 .  Save the CSV file on your computer so that you can use it later.
 
@@ -195,9 +79,9 @@ If you want to export 10,000 lines, for example, then export the first 6,000 lin
 [#90]
 ==  Exporting stock
 
-The export of your stock is one step in the process of xref:stock-management:taking-stock.adoc#[stocktaking] for example. You will receive a CSV file containing all relevant data fields.
+The export of your stock is one step in the xref:main@manual:stock-management:taking-stock.adoc[process of stocktaking], for example. You will receive a CSV file containing all relevant data fields.
 
-You can export your current stock by going to *Data » Export » Dynamic export*. Use the data format *Stock*. Pay attention to the note about mandatory fields of this data format on the xref:data:stock.adoc#[Stock] page of the manual.
+You can export your current stock by going to *Data » Dynamic export*. Use the data format *Stock*. Pay attention to the note about mandatory fields of this data format on the xref:main@manual:data:stock.adoc[Stock] page of the manual.
 
 [.instruction]
 Carrying out the data export:
@@ -205,9 +89,9 @@ Carrying out the data export:
 .  Go to *Data » Dynamic export*.
 .  Expand the data format *Stock*. +
 → If the data format is not available yet, create it as described above.
-.  Carry out the settings. Pay attention to the information given in <<table-export-options-dynamic-export>>.
-. *Save* the settings.
-.  Click on *Export data*. +
+.  Carry out the settings. Pay attention to the explanations given in <<table-export-options-dynamic-export>>.
+. *Save* (icon:save[role="green"]) the settings.
+.  Click on the gear-wheel icon *Export data*. +
 → A CSV file will be generated. You can edit and reuse the file again later. For example, you could import the file after having edited the data as needed.
 
 [[table-export-options-dynamic-export]]
@@ -238,7 +122,7 @@ Carrying out the data export:
 | Select whether the data should be exported *with* or *without item bundles*.
 
 | *Supplier*
-|Select *ALL* or a specific supplier.
+| Select *ALL* or a specific supplier.
 |====
 
-You may decide that the CSV file contains data fields that you don't need. Pay attention to the information given in <<table-export-options-dynamic-export>>. If so, then delete the unnecessary columns and save the file on your computer. In the column *Stock*, you can now enter the actual stock for each item. Determine the actual stock and enter the values into the *Stock* column within the CSV file. Save the changes.
+You may decide that the CSV file contains data fields that you don’t need. Pay attention to the explanations given in <<table-export-options-dynamic-export>>. If so, then delete the unnecessary columns and save the file on your computer. In the *Stock* column, you can now enter the actual stock for each item. Determine the actual stock and enter the values into the *Stock* column within the CSV file. Save the changes.
