--- a/docs/en-gb/modules/data/pages/export-import.adoc
+++ b/docs/en-gb/modules/data/pages/export-import.adoc
@@ -1,4 +1,4 @@
-= Deprecated: Dynamic data exchange
+= Dynamic data exchange (old function)
 :page-layout: overview
 :keywords: Data formats, dynamic Export
 :description: Learn how to use the dynamic export in plentymarkets and find out which data formats are available.
