Added information about changed assistant step

--- a/docs/de-de/modules/maerkte/partials/amz-basic-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-basic-assistant.adoc
@@ -48,25 +48,17 @@ a| In welcher Region möchtest du deine Artikel anbieten? Amazon unterteilt in d
 [.collapseBox]
 .Schritt *Zugriff auf Amazon erlauben*
 --
+Bevor du Amazon in plentymarkets einrichten kannst, musst du plentymarkets Zugriff auf dein Amazon-Konto erlauben, damit Daten zwischen Amazon und plentymarkets ausgetauscht werden können. Klicke auf *Zugriff erlauben*, um plentymarkets Zugriff auf Amazon zu erlauben. +
+Du wirst zu Amazon weitergeleitet und musst die Zugangsdaten deines Amazon-Verkäuferkontos eingeben, bestehend aus E-Mail und Passwort. Nachdem du dich bei Amazon eingeloggt hast, wird dir angezeigt, auf welche Daten aus Amazon plentymarkets zugreifen darf. Klicke dort auf *Confirm*, um die Autorisierung abzuschließen. +
+In diesem Schritt werden Authentifizierungstokens generiert, die für den Datenaustausch zwischen Amazon und plentymarkets benötigt werden.
 
-Bevor du Amazon in plentymarkets einrichten kannst, musst du MWS in deinem Amazon Seller Central-Konto einrichten. MWS steht für Marketplace Web Service und ist ein Service, der plentymarkets Zugriff auf dein Amazon-Konto erlaubt. Wie du das machst, ist im Assistenten beschrieben, daher findest du hier nur einen kurzen Überblick des Ablaufs:
+* Wenn die Autorisierung erfolgreich abgeschlossen wurde, öffnet sich ein neuer Tab in deinem Browser mit der Meldung "The authorization of plentymarkets for the seller ID [Seller ID] has been successfully completed. You can now close this window and go back to the plentymarkets assistant." +
+→ Du kannst diesen Tab schließen und zum Assistenten in plentymarkets zurückkehren.
 
-. Öffne den Link https://sellercentral.amazon.de/apps/manage.
-. Melde dich mit deinen Zugangsdaten für Amazon Seller Central an.
-. Klicke im Seller Central auf *Entwickler autorisieren*.
-. Gib die folgenden Zugangsdaten ein:
+* Wenn die Autorisierung nicht abgeschlossen werden konnte und ein Fehler aufgetreten ist, öffnet sich ein neuer Tab in deinem Browser mit der Meldung "The authorization of plentymarkets for the seller ID [Seller ID] failed. The following error occurred: [Fehlermeldung]." +
+→ Wiederhole diesen Schritt des Assistenten, wenn die Autorisierung nicht abgeschlossen werden konnte.
 
-  * Name des Entwicklers: plentymarkets
-  * Entwickler-ID für EU-Marktplätze: 6860-7675-7360
-  * Entwickler-ID für den Marktplatz USA: 5751-6263-3716
-
-. Klicke auf *Weiter*. +
-→ Die MWS-Registrierung ist abgeschlossen. +
-→ Du erhältst eine Verkäufer-ID.
-
-'''
-*Verkäufer-ID*
-Nachdem du MWS wie oben beschrieben eingerichtet hast, erhältst du eine Verkäufer-ID. Diese Verkäufer-ID wird benötigt, damit Amazon und plentymarkets Daten miteinander austauschen können. Gib die Verkäufer-ID in dieses Feld ein.
+*_Hinweis:_* Wenn du die Autorisierung erfolgreich abgeschlossen hast, wird die Verkäufer-ID deines Amazon-Verkäuferkontos in diesem Schritt des Assistenten angezeigt. Wenn die Autorisierung fehlgeschlagen ist, wird anstelle der Verkäufer-ID *N/A* angezeigt.
 --
 
 [.collapseBox]
