Changed wording of deprecated overview pages

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -260,8 +260,8 @@
 ** xref:daten:ftpz-zugang[FTP-Zugang (nur für ältere Systeme)]
 ** xref:daten:interne-IDs.adoc[Interne IDs in plentymarkets]
 ** xref:daten:alte-tools.adoc[Veraltete Tools]
-*** xref:daten:export-import.adoc[Veraltet: Dynamischer Datenaustausch]
-**** xref:daten:alte-tools-daten-exportieren.adoc[Daten über dynamischen Export exportieren]
+*** xref:daten:export-import.adoc[Dynamischer Datenaustausch (alte Funktion)]
+**** xref:daten:alte-tools-daten-exportieren.adoc[Daten über dynamischen Export exportieren (alte Funktion)]
 **** xref:daten:datenformate.adoc[Datenformate]
 ***** xref:daten:attribute.adoc[Attribute]
 ***** xref:daten:campaign.adoc[Campaign]
